# zsh-tool

./: .gitignore  .gitlab-ci.yml  .mcp.json  README.md  pyproject.toml  server.json
.claude-plugin/: CLAUDE.md  plugin.json
.claude-plugin/commands/: setup.md
.github/badges/: coverage.json
.github/workflows/: ci.yml
.mcp/zulipchat/: zulipchat.duckdb
docs/patches/: claude-code-mcp-output.md
docs/plans/: 2026-02-08-feedback-improvements-design.md  2026-02-10-feedback-improvements-impl.md  2026-02-11-alan-v2-upgrade-design.md  2026-02-15-alan-rust-port-design.md
scripts/: manopt  run-mcp.sh  version-check.py
src/: server.py
tests/: conftest.py  test_alan_core.py  test_alan_exit_awareness.py  test_alan_insights.py  test_alan_manopt.py  test_alan_retry.py  test_alan_rust_integration.py  test_alan_ssh.py  test_alan_streak.py  test_config.py  test_mcp_handlers.py  test_neverhang.py  test_rust_e2e.py  test_rust_executor.py  test_task_basic.py  test_task_interactive.py  test_task_pty.py
zsh-tool-rs/: Cargo.toml
zsh-tool-rs/src/: circuit.rs  config.rs  executor.rs  lib.rs  main.rs  meta.rs
zsh-tool-rs/src/alan/: hash.rs  insights.rs  manopt.rs  mod.rs  pipeline.rs  prune.rs  ssh.rs  stats.rs  streak.rs
zsh-tool-rs/src/serve/: format.rs  mod.rs  protocol.rs  tools.rs
zsh-tool-rs/tests/: alan_hash.rs  alan_insights.rs  alan_pipeline.rs  alan_schema.rs  alan_ssh.rs  alan_streak.rs  config.rs  mcp_integration.rs  pipe_basic.rs  pty_basic.rs  timeout.rs
zsh_tool/: __init__.py  alan.py  config.py  server.py  tasks.py
(+2 files in other folders)
