[package]
name = "zsh-tool-exec"
version = "0.5.1"
edition = "2021"
description = "fd 3 sideband executor for zsh-tool"

[lib]
name = "zsh_tool_exec"
path = "src/lib.rs"

[[bin]]
name = "zsh-tool-exec"
path = "src/main.rs"

[dependencies]
nix = { version = "0.29", features = ["process", "signal", "fs", "term"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
